--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
+    "lint:spelling": "cspell \"**\"",
     "test": "vscode-test"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/vscode": "^1.107.0",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
+    "cspell": "^9.4.0",
     "esbuild": "^0.27.1",
     "eslint": "^9.39.1",
     "npm-run-all": "^4.1.5",
