--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
     "lint:spelling": "cspell \"**\"",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -43,9 +44,17 @@
     "cspell": "^9.4.0",
     "esbuild": "^0.27.1",
     "eslint": "^9.39.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,json,md}": [
+      "cspell --no-must-find-files",
+      "prettier --write"
+    ]
   }
 }
