--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cspell": "^9.4.0",
     "esbuild": "^0.27.1",
     "eslint": "^9.39.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "npm-run-all": "^4.1.5",
